terraform/modules/vpc/main.tf
#Virtual Private Cloud
resource "aws_vpc" "cyber94_vulnerability_scanner_vpc_tf"{
  cidr_block = "10.118.0.0/16"
  enable_dns_support = true
  enable_dns_hostnames = true

  tags = {
    Name = "cyber94_vulnerability_scanner_vpc"
  }
}

#Internet gateway
resource "aws_internet_gateway" "cyber94_vulnerability_scanner_ig_tf" {
  vpc_id = aws_vpc.cyber94_vulnerability_scanner_vpc_tf.id

  tags = {
    Name = "cyber94_vulnerability_scanner_ig"
  }
}

#Route Table
resource "aws_route_table" "cyber94_vulnerability_scanner_rt_tf"{
  vpc_id = aws_vpc.cyber94_vulnerability_scanner_vpc_tf.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.cyber94_vulnerability_scanner_ig_tf.id
    }
  tags = {
    Name = "cyber94_vulnerability_scanner_rt"
  }
}

# DNS
resource "aws_route53_zone" "cyber94_vulnerability_scanner_vpc_dns_tf" {
  name = "vul_scanner"

  vpc {
    vpc_id = aws_vpc.cyber94_vulnerability_scanner_vpc_tf.id
  }
}
